...
        onUpdateValue={setNewEmail}
        value={newEmail}
        keyboardType="email-address"
        isInvalid={invalid}
        textContentType="emailAddress"
        autoComplete="email"
        testID="add-email-input"
      />
      <View style={styles.buttonContainer}>
        <AnimatedLoadingButton
          onPress={handleAdd}
          loading={adding}
          testID="add-email-button"
        >
          {t("email_add_button")}
        </AnimatedLoadingButton>
      </View>
    </Layout>
  );
...
